Bug 792992 - Switch URL usage to URI to prevent unnecessary network calls. r=rnewman